--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ __pycache__/
 *.zip
 *.nc
 *.kmz
+*.bin
 
 
 *.aux.xml
@@ -18,3 +19,5 @@ __pycache__/
 .idea/
 
 tests/
+tc_data/
+test_experiment.py
