fix data extraction error

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ __pycache__/
 tests/
 tc_data/
 test_experiment.ipynb
+test_experiment.py
+working_data_extraction_experiment.ipynb
+ecmwf_tc_data_exploration.py
