--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ __pycache__/
 tests/
 tc_data/
 tc_mario/
+tc_bualoi/
 test_experiment.ipynb
 test_experiment.py
 working_data_extraction_experiment.ipynb
